--- a/display-exercise.html
+++ b/display-exercise.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" type="text/css" href="styles/display-page.css">
 </head>
 <body>
-<!-- your HTML here to implement the colored box design -->
-	<p>Placeholder!</p>
+<div class="mainbox"> <div class="greenbox"></div><div class="bluebox"></div>
+<div class="greybox"></div> <div class="blackbox"></div><div class="orangebox"></div></div> 
 </body>
 </html>
